syntax = "proto3";

package coordinator_proto;

service Call {
  rpc NewLedger(NewLedgerReq) returns (NewLedgerResp);
  rpc Append(AppendReq) returns (AppendResp);
  rpc ReadLatest(ReadLatestReq) returns (ReadLatestResp);
  rpc ReadByIndex(ReadByIndexReq) returns (ReadByIndexResp);
}

message NewLedgerReq {
}

message NewLedgerResp {
  bytes block = 1;
  bytes signature = 2;
}

message AppendReq {
  bytes handle = 1;
  bytes block = 2;
  bytes cond_tail_hash = 3;  // Ideally optional
}

message AppendResp {
  bytes tail_hash = 1;
  uint64 height = 2;
  bytes signature = 3;
}

message ReadLatestReq {
  bytes handle = 1;
  bytes nonce = 2;
}

message ReadLatestResp {
  bytes block = 1;
  bytes tail_hash = 2;
  uint64 height = 3;
  bytes signature = 4;
}

message ReadByIndexReq {
  bytes handle = 1;
  uint64 index = 2;
}

message ReadByIndexResp {
  bytes block = 1;
  bytes tail_hash = 2;
  bytes signature = 3;
}